--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	
 	<body>
 		<!-- en-tête -->
-		<div class="onglets" > 
+		<div class="onglets onglet_mobile" > 
 		<nav class="bar">
 		
 		 <div class="ima" > <img src="Icon.ico" alt="image"  height="72px" width="150px" /> </div>
