--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 				</div>
 			</div>
 			<!--Copie-->
-			<p> Kam's - Achat et Vente des produits de qualités | copyright &copy2025,Conakry - République de Guinée | Tous droits réservés</p>
+			<p> Kam's Shop - Achat et Vente des produits de qualités | copyright &copy2025,Conakry - République de Guinée | Tous droits réservés</p>
 		</div>
 	</footer>
 	 <!-- ************************** Les scripts **************************	 -->
