--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		 </nav>
 		 </div>
 		<div class="onglet_mobile" > 
-		<nav class="bar">
+		<nav class="bar onglet_mobile">
 		
 		 <div class="ima" > <img src="Icon.ico" alt="image"  height="72px" width="150px" /> </div>
 			<span class="titre"><b>Kam's Shop - La vente de meilleurs produits en ligne</b></span>
