--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 		<!-- en-tête -->
 		<div class="onglets" > 
 		<nav class="bar">
-		
 		 <div class="ima" > <img src="Icon.ico" alt="image"  height="72px" width="150px" /> </div>
 			<span class="titre"><b>Kam's Shop - La vente de meilleurs produits en ligne</b></span>
 			<ul>	
@@ -39,8 +38,8 @@
 				<button class="seh" onclick="document.location='login.html'">Se connecter</button>
 		 </nav>
 		 </div>
-		<div class="onglet_mobile" > 
-		<nav class="bar onglet_mobile">
+		 
+		<nav class="onglet_mobile">
 		
 		 <div class="ima" > <img src="Icon.ico" alt="image"  height="72px" width="150px" /> </div>
 			<span class="titre"><b>Kam's Shop - La vente de meilleurs produits en ligne</b></span>
@@ -61,7 +60,6 @@
 			</ul>	
 				<button class="seh" onclick="document.location='login.html'">Se connecter</button>
 		 </nav>
-		 </div>
 		 
 		 <!--Image acceuil-->
 	<header>
