--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 		 <div class="ima" > <img src="Icon.ico" alt="image"  height="72px" width="150px" /> </div>
 			<span class="titre"><b>Kam's Shop - La vente de meilleurs produits en ligne</b></span>
 			<ul>	
-				<li><a href="index.html">Acceuil</a></li> |
-				<li><a href="#add">Articles</a></li> |
+				<li><a href="index.html">Acceuil</a></li>
+				<li><a href="#add">Articles</a></li>
 				<li><a href="">Nos marques</a>
 					<div class="marque">
 						<ul class="lis">
@@ -54,8 +54,8 @@
 							<li class="lis"><a href="">Vêtements</a></li>
 						</ul>
 					</div>
-				</li> |
-				<li><a href="mailto:moussakamissoko078@gmail.com">Contact</a></li> |
+				</li>
+				<li><a href="mailto:moussakamissoko078@gmail.com">Contact</a></li>
 				<li><a href="tel:662824922">Téléphone</a></li>
 			</ul>	
 				<button class="seh" onclick="document.location='login.html'">Se connecter</button>
