--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 	
 	<body>
 		<!-- en-tête -->
+		<div class="toggle_btn">
+			<span></span>
+		</div>
 		<div class="onglets" > 
 		<nav class="bar">
 		 <div class="ima" > <img src="Icon.ico" alt="image"  height="72px" width="150px" /> </div>
