--- a/index.html
+++ b/index.html
@@ -183,6 +183,6 @@
 	</footer>
 	 <!-- ************************** Les scripts **************************	 -->
 	<!-- <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script> -->
-	<script src="script.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 	</body>
 </html>
